# mandelbrot_claude

./: README.md  TODO.md  analyze_color_mapping.py  benchmark_parallel.py  benchmark_simple.py  color_demo.py  coordinate_demo.py  debug_simple_texture.py  debug_test.py  debug_texture.py  main.py  pyproject.toml  quick_fix_gui.py  requirements.txt  test_image_display.py  test_mandelbrot_output.py  test_parallel_correctness.py  test_simple_gui.py
src/: color_mapping.py  coordinate_transforms.py  gui.py  logger_config.py  mandelbrot_core.py  mandelbrot_gui.py  simple_gui.py
tests/: test_color_mapping.py  test_coordinate_transforms.py  test_mandelbrot_core.py
